// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`navigation mapping > matches snapshot for sidebar contexts 1`] = `
[
  {
    "depth": 0,
    "i18nKey": "nav.dashboard",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "dashboard",
    "meta": {
      "quickAction": true,
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 10,
    "parent": undefined,
    "path": "/reports",
    "visibility": {
      "roles": [
        "admin",
        "manager",
        "staff",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.elections",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "elections",
    "meta": {
      "quickAction": true,
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 20,
    "parent": undefined,
    "path": "/elections",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.geoAreas",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "geoAreas",
    "meta": {
      "quickAction": true,
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 30,
    "parent": undefined,
    "path": "/geo-areas",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.committees",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "committees",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 40,
    "parent": undefined,
    "path": "/committees",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.voters",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "voters",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 50,
    "parent": undefined,
    "path": "/voters",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.candidates",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "candidates",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 55,
    "parent": undefined,
    "path": "/candidates",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "children": [
      {
        "depth": 1,
        "i18nKey": "nav.fieldOps.agents",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "fieldOps.agents",
        "order": 10,
        "parent": [Circular],
        "path": "/agents",
      },
      {
        "badge": {
          "source": "volunteers",
          "type": "count",
        },
        "depth": 1,
        "i18nKey": "nav.fieldOps.volunteers",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "fieldOps.volunteers",
        "order": 20,
        "parent": [Circular],
        "path": "/volunteers",
      },
      {
        "badge": {
          "source": "alerts",
          "type": "count",
        },
        "depth": 1,
        "i18nKey": "nav.fieldOps.observations",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "fieldOps.observations",
        "order": 30,
        "parent": [Circular],
        "path": "/observations",
      },
      {
        "depth": 1,
        "i18nKey": "nav.fieldOps.zones",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "fieldOps.zones",
        "order": 40,
        "parent": [Circular],
        "path": "/zones/mansoura",
      },
    ],
    "depth": 0,
    "i18nKey": "nav.fieldOps",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "fieldOps",
    "meta": {
      "surfaces": [
        "sidebar",
      ],
    },
    "order": 60,
    "parent": undefined,
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "children": [
      {
        "depth": 1,
        "i18nKey": "nav.campaigns.automation",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "campaigns.automation",
        "order": 20,
        "parent": [Circular],
        "path": "/automation",
      },
    ],
    "depth": 0,
    "i18nKey": "nav.campaigns",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "campaigns",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 70,
    "parent": undefined,
    "path": "/campaigns",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.settings",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "settings",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 100,
    "parent": undefined,
    "path": "/settings",
    "visibility": {
      "roles": [
        "admin",
      ],
    },
  },
]
`;

exports[`navigation mapping > matches snapshot for sidebar contexts 2`] = `
[
  {
    "depth": 0,
    "i18nKey": "nav.dashboard",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "dashboard",
    "meta": {
      "quickAction": true,
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 10,
    "parent": undefined,
    "path": "/reports",
    "visibility": {
      "roles": [
        "admin",
        "manager",
        "staff",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.elections",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "elections",
    "meta": {
      "quickAction": true,
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 20,
    "parent": undefined,
    "path": "/elections",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.geoAreas",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "geoAreas",
    "meta": {
      "quickAction": true,
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 30,
    "parent": undefined,
    "path": "/geo-areas",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.committees",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "committees",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 40,
    "parent": undefined,
    "path": "/committees",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.voters",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "voters",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 50,
    "parent": undefined,
    "path": "/voters",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.candidates",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "candidates",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 55,
    "parent": undefined,
    "path": "/candidates",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "children": [
      {
        "depth": 1,
        "i18nKey": "nav.fieldOps.agents",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "fieldOps.agents",
        "order": 10,
        "parent": [Circular],
        "path": "/agents",
      },
      {
        "badge": {
          "source": "volunteers",
          "type": "count",
        },
        "depth": 1,
        "i18nKey": "nav.fieldOps.volunteers",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "fieldOps.volunteers",
        "order": 20,
        "parent": [Circular],
        "path": "/volunteers",
      },
      {
        "badge": {
          "source": "alerts",
          "type": "count",
        },
        "depth": 1,
        "i18nKey": "nav.fieldOps.observations",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "fieldOps.observations",
        "order": 30,
        "parent": [Circular],
        "path": "/observations",
      },
      {
        "depth": 1,
        "i18nKey": "nav.fieldOps.zones",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "fieldOps.zones",
        "order": 40,
        "parent": [Circular],
        "path": "/zones/mansoura",
      },
    ],
    "depth": 0,
    "i18nKey": "nav.fieldOps",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "fieldOps",
    "meta": {
      "surfaces": [
        "sidebar",
      ],
    },
    "order": 60,
    "parent": undefined,
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "children": [
      {
        "depth": 1,
        "i18nKey": "nav.campaigns.automation",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "campaigns.automation",
        "order": 20,
        "parent": [Circular],
        "path": "/automation",
      },
    ],
    "depth": 0,
    "i18nKey": "nav.campaigns",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "campaigns",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 70,
    "parent": undefined,
    "path": "/campaigns",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
]
`;

exports[`navigation mapping > matches snapshot for sidebar contexts 3`] = `
[
  {
    "depth": 0,
    "i18nKey": "nav.dashboard",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "dashboard",
    "meta": {
      "quickAction": true,
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 10,
    "parent": undefined,
    "path": "/reports",
    "visibility": {
      "roles": [
        "admin",
        "manager",
        "staff",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.elections",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "elections",
    "meta": {
      "quickAction": true,
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 20,
    "parent": undefined,
    "path": "/elections",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.geoAreas",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "geoAreas",
    "meta": {
      "quickAction": true,
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 30,
    "parent": undefined,
    "path": "/geo-areas",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.committees",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "committees",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 40,
    "parent": undefined,
    "path": "/committees",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.voters",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "voters",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 50,
    "parent": undefined,
    "path": "/voters",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "depth": 0,
    "i18nKey": "nav.candidates",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "candidates",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 55,
    "parent": undefined,
    "path": "/candidates",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "children": [
      {
        "depth": 1,
        "i18nKey": "nav.fieldOps.agents",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "fieldOps.agents",
        "order": 10,
        "parent": [Circular],
        "path": "/agents",
      },
      {
        "badge": {
          "source": "volunteers",
          "type": "count",
        },
        "depth": 1,
        "i18nKey": "nav.fieldOps.volunteers",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "fieldOps.volunteers",
        "order": 20,
        "parent": [Circular],
        "path": "/volunteers",
      },
      {
        "badge": {
          "source": "alerts",
          "type": "count",
        },
        "depth": 1,
        "i18nKey": "nav.fieldOps.observations",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "fieldOps.observations",
        "order": 30,
        "parent": [Circular],
        "path": "/observations",
      },
      {
        "depth": 1,
        "i18nKey": "nav.fieldOps.zones",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "fieldOps.zones",
        "order": 40,
        "parent": [Circular],
        "path": "/zones/mansoura",
      },
    ],
    "depth": 0,
    "i18nKey": "nav.fieldOps",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "fieldOps",
    "meta": {
      "surfaces": [
        "sidebar",
      ],
    },
    "order": 60,
    "parent": undefined,
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
  {
    "children": [
      {
        "depth": 1,
        "i18nKey": "nav.campaigns.automation",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "campaigns.automation",
        "order": 20,
        "parent": [Circular],
        "path": "/automation",
      },
    ],
    "depth": 0,
    "i18nKey": "nav.campaigns",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "campaigns",
    "meta": {
      "surfaces": [
        "sidebar",
        "top",
      ],
    },
    "order": 70,
    "parent": undefined,
    "path": "/campaigns",
    "visibility": {
      "hideWhen": [
        "unauthenticated",
      ],
    },
  },
]
`;
